--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ espresso = "3.6.1"
 mockkCore = "1.13.2"
 mockkCommon = "1.12.5"
 sqlDelight = "2.0.2"
-kotlin-serialization = "2.0.20-RC2"
+kotlin-serialization = "2.0.20"
 kotlin-serialization-core = "1.6.2"
 koin = "3.5.6"
 ktor = "2.3.11"
@@ -26,6 +26,7 @@ androidx-metrics = "1.0.0-beta01"
 tracing = "1.2.0"
 coil = "2.7.0"
 paging-compose = "3.3.2"
+touchlab-skie = "0.9.0-RC.3"
 
 
 [libraries]
@@ -115,6 +116,7 @@ androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin-serialization" }
+touchlab-skie = { id = "co.touchlab.skie", version.ref = "touchlab-skie" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
